--- a/index.ipynb
+++ b/index.ipynb
@@ -201,7 +201,7 @@
    "source": [
     "homer = simpsons[0]\n",
     "find_initial(homer)\n",
-    "names = name.split(' ')"
+    "names .split(' ')"
    ]
   },
   {
