--- a/index.ipynb
+++ b/index.ipynb
@@ -201,7 +201,7 @@
    "source": [
     "homer = simpsons[0]\n",
     "find_initial(homer)\n",
-    "simpsons.split(' ')"
+    "simpsons[0].split(' ')"
    ]
   },
   {
