--- a/index.ipynb
+++ b/index.ipynb
@@ -183,24 +183,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Homer', 'Simpson']"
+       "'HS'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "homer = simpsons[0]\n",
-    "find_initial(homer)\n",
-    "simpsons[0].split(' ')"
+    "find_initial(homer)"
    ]
   },
   {
