Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -183,22 +183,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'HS'"
+       "'Homer Simpson'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "homer = simpsons[0]\n",
+    "simpsons[0]\n",
     "#find_initial(homer)"
    ]
   },
