Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -183,23 +183,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Homer Simpson'"
+       "'HS'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "homer = simpsons[0]\n",
-    "#find_initial(homer)"
+    "find_initial(homer)"
    ]
   },
   {
