--- a/index.ipynb
+++ b/index.ipynb
@@ -198,7 +198,7 @@
     }
    ],
    "source": [
-    "homer = simpsons[0]\n",
+    "#homer = simpsons[0]\n",
     "find_initial(homer)"
    ]
   },
