Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -199,7 +199,8 @@
    ],
    "source": [
     "#homer = simpsons[0]\n",
-    "#find_initial(homer)\n"
+    "#find_initial(homer)\n",
+    "sim"
    ]
   },
   {
