--- a/index.ipynb
+++ b/index.ipynb
@@ -200,7 +200,7 @@
    "source": [
     "#homer = simpsons[0]\n",
     "#find_initial(homer)\n",
-    "this = simpson"
+    "this = simpsons"
    ]
   },
   {
