Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -183,16 +183,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'HS'"
+       "'Homer Simpson'"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,7 +200,8 @@
    "source": [
     "#homer = simpsons[0]\n",
     "#find_initial(homer)\n",
-    "this = simpsons"
+    "this = simpsons[0]\n",
+    "this"
    ]
   },
   {
