--- a/index.ipynb
+++ b/index.ipynb
@@ -201,7 +201,7 @@
     "#homer = simpsons[0]\n",
     "#find_initial(homer)\n",
     "this = simpsons[0]\n",
-    "this"
+    "this_one = "
    ]
   },
   {
