Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -201,7 +201,8 @@
     "#homer = simpsons[0]\n",
     "#find_initial(homer)\n",
     "this = simpsons[0]\n",
-    "this_one = this[]"
+    "this_one = this[0]\n",
+    "this_one"
    ]
   },
   {
