Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -201,7 +201,7 @@
     "#homer = simpsons[0]\n",
     "#find_initial(homer)\n",
     "this = simpsons[0]\n",
-    "this_too = this[1]\n",
+    "this_too = this[]\n",
     "this_too"
    ]
   },
