Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -183,16 +183,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'H'"
+       "'o'"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,8 +201,8 @@
     "#homer = simpsons[0]\n",
     "#find_initial(homer)\n",
     "this = simpsons[0]\n",
-    "this_too = this[0]\n",
-    "this_too[0]"
+    "this_too = this[]\n",
+    "this_too"
    ]
   },
   {
