Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -183,16 +183,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Homer Simpson'"
+       "'H'"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,7 +202,7 @@
     "#find_initial(homer)\n",
     "this = simpsons[0]\n",
     "this_too = this[0]\n",
-    "this"
+    "this_too[0]"
    ]
   },
   {
