Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -183,31 +183,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Homer Simpson'"
+       "'HS'"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#homer = simpsons[0]\n",
-    "#find_initial(homer)\n",
-    "this = simpsons[0]\n",
-    "this_too = this[0]\n",
-    "this"
+    "homer = simpsons[0]\n",
+    "find_initial(homer)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +213,7 @@
        "['HS', 'MS', 'BS', 'MS', 'LS']"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
